--- a/financer/index.html
+++ b/financer/index.html
@@ -10,9 +10,13 @@
     var Ext = Ext || {};
     Ext.beforeLoad = function (tags) {
       var profile;
-      profile = 'desktop';
+      var s = location.search;
+      if (s.match(/\bdesktop\b/)){ profile = 'desktop'
+      } else if (s.match(/\bphone\b/)) { profile = 'phone'
+      } else { profile = tags.desktop ? 'desktop' : 'phone'}
       Ext.manifest ='generatedFiles/' + profile;
     };
+
   </script>
 
   <!-- The line below must be kept intact for Sencha Cmd to build your application -->
